neuroplan-login-mvp/k8s/dr/30-replicas-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neuroplan-frontend
spec:
  replicas: 1

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neuroplan-backend
spec:
  replicas: 1
